--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-openai>=1.0.0
-pinecone-client>=3.0.0
-python-dotenv
-fastapi
-uvicorn
-google-cloud-storage
-google-cloud-pubsub
+kafka-python==2.0.2
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
+google-cloud-pubsub==2.19.4
+google-cloud-storage==2.14.0
+openai==1.23.6
+pinecone>=3.0.0
 PyMuPDF
-psycopg2-binary
-kafka-python
-requests
